
    - Added a new PatternEngine called RandomFragmentPatternEngine. This PatternEngine can be used for example to generate
      drum patterns. It gives you more control over the results than the RandomPatternEngine by building a pattern by concatenating
      provided pattern fragments, but does not support random velocity generation.

    - The RandomSequenceEngine and the RandomPatternSequenceEngine are now deprecated (they will be removed in a future
      version). Consider using the RandomPatternEngine or RandomFragmentPatternEngine with a different SequenceEngine instead.

    - Added pseudo LFO controller "milliBPM" to the MidiPlayer. This allows changing the BPM during playback using an LFO. Note
      that this has some side-effects on other time-dependent LFOs, because the BPM are used as the time basis.

    - Re-implemented the ArpeggioSequenceEngine to use PatternEngines.

    - Improved example. The example now uses the RandomFragmentPatternEngine for the percussion.


0.0.5: 2011-02-27

    - The command-line version of SoundHelix now accepts document URLs as well instead of only files, so XML files
      can be referenced by using HTTP/HTTPS/FTP URLs directly. Note that HTTPS requires special JVM configuration.

    - The base URL (xml:base) is now set correctly when XML documents are parsed. This means that
      XInclude can now be used properly. All relative URLs referenced in the XML documents are now
      relative to the including document URLs. The example has been changed to source out the SongNameEngine and
      the HarmonyEngine configuration as separate documents.
 
    - The RandomPatternEngine now also supports wildcards as offsets. Useful for all SequenceEngines which allow wildcards
      (e.g., the MelodySequenceEngine).

    - Introduced "version" attribute for the XML root tag. If present, the application version will be checked against the